chore: update site description

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -1,7 +1,7 @@
 {
   "HomePage": {
     "title": "Numo",
-    "description": "Borrow stablecoins at fixed rates.",
+    "description": "Money market for FX stablecoins",
     "techStackHeading": "Built with Modern Tools"
   }
 }
